src/app/globals.css
@import "tailwindcss";

/* psuedo class */
:root {
  color-scheme: dark;
  --background: rgb(23 23 23);
  --foreground: rgb(248 250 252);
  --primary: rgb(125 211 252);
}

:root[data-theme='dark'] {
  color-scheme: dark;
  --background: rgb(23 23 23);
  --foreground: rgb(248 250 252);
  --primary: rgb(125 211 252);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root:not([data-theme]) {
    color-scheme: dark;
    --background: rgb(23 23 23);
    --foreground: rgb(248 250 252);
    --primary: rgb(125 211 252);
  }
}

html {
  scroll-behavior: smooth;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

